# ghpr

./: .ghprrc  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Readme.md
.github/: workflows.yml
.github/workflows/: tests.yml
src/: config_reader.rs  consts.rs  main.rs  model_types.rs  url_builder.rs  utils.rs
tests/: tests.rs
